# Mothman

./: .gitmodules  CMakeLists.txt
frontend/png/: main.c
frontend/qt/: main.cpp  mothmanview.cpp  mothmanview.h  mothmanwindow.cpp  mothmanwindow.h  nematodechrome.cpp  nematodechrome.h
mothman/: mothman.c  mothman.h  protohandle.c  protohandle.h  tagparser.c  tagparser.h
network/include/: request-curl.h
network/lib/: request-curl.c
tools/parser/: Makefile  generator-c.c  html-tags.txt  parser.c  parser.h  tagparser.c
